<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/overview" />
        <item
            android:id="@+id/nav_binomial"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/binomial_dis" />
        <item
            android:id="@+id/nav_multinomial"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/multinomial_dis" />
        <item
            android:id="@+id/nav_negative"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/negative_dis" />
        <item
            android:id="@+id/nav_geometric"
            android:title="@string/geometric_dis" />
        <item
            android:id="@+id/nav_poisson"
            android:title="@string/poisson_dis" />
    </group>
</menu>
