<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.oscarok.discretedistributions.fragments.PoissonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_success"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lambda"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_experiments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_experiments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_poisson_t"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_probability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_probability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_poisson_x"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</FrameLayout>
